fixed fullscreen bg colour if page spills the fold

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body, #__next{
+  height: 100%;
+}
+
 .contact-link {
   @apply hover:text-pink-500 underline transition;
 }
